--- a/index.html
+++ b/index.html
@@ -2,15 +2,32 @@
 <html lang="ru">
 
 <head>
+    <script defer src="js/main.js"></script>
     <script defer src="js/script.js"></script>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-
+    <h1 class="tittle">WELCOME</h1>
+    <h2 class="tittle__sub">HOME WORK</h2>
+    <P class="tittle__desc">Пожалуйста, выберете интересующий вас номер домашней работы.</P>
+    <div class="home__work">
+        <ul class="work__list">
+            <li class="list__item">Домашнее задание №1</li>
+            <li class="list__item">Домашнее задание №2</li>
+            <li class="list__item">Домашнее задание №3</li>
+            <li class="list__item">Домашнее задание №4</li>
+            <li class="list__item">Домашнее задание №5</li>
+            <li class="list__item">Домашнее задание №6</li>
+            <li class="list__item">Домашнее задание №7</li>
+            <li class="list__item">Домашнее задание №8</li>
+        </ul>
+    </div>
 </body>
 
 </html>
