--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <script defer src="js/main.js"></script>
     <script defer src="js/script.js"></script>
+    <script defer src="js/script2.js"></script>
     
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
