--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script defer src="js/script.js"></script>
     <script defer src="js/script2.js"></script>
     <script defer src="js/script3.js"></script>
+    <script defer src="js/script4.js"></script>
     
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
